2001-08-21  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Source/GSFFCallInvocation.m: Clearified comments
	(gs_method_for_receiver_and_selector) added 
	(GSInvocationCallback): Check if forwardInvocation: is
	implemented to avoid infinite recursion bug.

Fri Aug 24 12:34:56 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSUserDefaults.m ([-__createArgumentDictionary]): Make
	sure we don't crash trying to parse an argument as a property
	list.

Fri Aug 24 10:23:02 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Resources/Italian.lproj/Localizable.strings: New file.
	* Resources/GNUmakefile (LANGUAGES): Added Italian.

2001-08-21  Adam Fedor  <fedor@gnu.org>

	* Resources/English.lproj/Localizable.strings: New file
	* Resources/German.lproj/Localizable.strings: Likewise.
	* Resources/French.lproj/Localizable.strings: Likewise.
	* Resources/GNUmakefile: Install them. (files from 
	michael.scheibler@onevision.de)
	
	* config/config.loadtest.m: Make Test inheret from Object 
	(Darwin objc checks that classes implement forward::).
	* config/config.objc.m: Likewise.

2001-08-20  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Documentation/gsdoc/ NSPipe.{gsdoc, html}: this class has been 
	forgotten
	* Documentation/gsdoc/{Base, NSObject, NSPort}.{gsdoc, html}:
	updates to the links to show NSPipe

2001-08-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gsdoc.m: ([-initWithFileName:]) call xmlKeepBlanksDefault(0)
	to handle change in recent libxml whitespace handling.

2001-08-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDistantObject.m: Tidy method lookup code.
	* Source/NSString.m: Handle nil content when parsing xml elements.

2001-08-06  Willem Rein Oudshoorn  <wim@xs4all.nl>

        * Source/GSFFCallInvocation.m: Forwarding:
        thread safe, handle missing typeinformation better,
        performance improvement.
	Minor tidyups by RFM

2001-08-06  Richard Frith-Macdonald <rfm@gnu.org>
